--- a/modules/sdk/project-templates/project-templates-service-builder/src/main/resources/archetype-resources/__artifactId__-api/pom.xml
+++ b/modules/sdk/project-templates/project-templates-service-builder/src/main/resources/archetype-resources/__artifactId__-api/pom.xml
@@ -28,6 +28,15 @@
 			<artifactId>com.liferay.petra.lang</artifactId>
 			<scope>provided</scope>
 		</dependency>
+#end
+#if (${liferayVersion.startsWith("7.3")})
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.petra.sql.dsl.api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+#end
+#if (${liferayVersion.startsWith("7.2")} || ${liferayVersion.startsWith("7.3")})
 		<dependency>
 			<groupId>com.liferay</groupId>
 			<artifactId>com.liferay.petra.string</artifactId>
