LPS-115574 | LPS-111512 Add a property to indicate whether a dataLayout attached to a workflowTask will be shown as readOnly or not

--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-rest-impl/rest-openapi.yaml
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-rest-impl/rest-openapi.yaml
@@ -17,6 +17,14 @@ components:
                         $ref: "#/components/schemas/AppWorkflowTask"
                     type: array
             type: object
+        AppWorkflowDataLayoutLink:
+            properties:
+                dataLayoutId:
+                    format: int64
+                    type: integer
+                readOnly:
+                    type: boolean
+            type: object
         AppWorkflowState:
             properties:
                 appWorkflowTransitions:
@@ -30,14 +38,13 @@ components:
             type: object
         AppWorkflowTask:
             properties:
+                appWorkflowDataLayoutLinks:
+                    items:
+                        $ref: "#/components/schemas/AppWorkflowDataLayoutLink"
+                    type: array
                 appWorkflowTransitions:
                     items:
                         $ref: "#/components/schemas/AppWorkflowTransition"
-                    type: array
-                dataLayoutIds:
-                    items:
-                        format: int64
-                        type: integer
                     type: array
                 name:
                     type: string
