--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -236,6 +236,13 @@
         modules/apps/marketplace/app.bnd,\
         modules/apps/static/app.bnd
 
+    source.check.BNDSuiteCheck.allowedLiferayRelengSuiteNames=\
+        collaboration,\
+        forms-and-workflow,\
+        foundation,\
+        static,\
+        web-experience
+
     source.check.BNDExportsCheck.allowedExportPackageDirNames=\
         modules/apps/alloy/alloy-mvc,\
         modules/apps/petra/petra-content,\
