--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -238,6 +238,7 @@
 
     source.check.BNDSuiteCheck.allowedLiferayRelengSuiteNames=\
         collaboration,\
+        commerce,\
         forms-and-workflow,\
         foundation,\
         static,\
