--- a/modules/dxp/apps/segments/segments-experiment-web/package.json
+++ b/modules/dxp/apps/segments/segments-experiment-web/package.json
@@ -5,6 +5,7 @@
 		"@clayui/drop-down": "3.4.4",
 		"@clayui/form": "3.8.0",
 		"@clayui/icon": "3.0.5",
+		"@clayui/layout": "3.1.0",
 		"@clayui/link": "3.2.0",
 		"@clayui/modal": "3.5.1",
 		"@clayui/tabs": "3.2.1",
