LPS-105232 Use BOM when possible

--- a/modules/sdk/project-templates/project-templates-rest-builder/src/main/resources/archetype-resources/__artifactId__-api/build.gradle
+++ b/modules/sdk/project-templates/project-templates-rest-builder/src/main/resources/archetype-resources/__artifactId__-api/build.gradle
@@ -13,5 +13,9 @@ dependencies {
 #if (!${liferayVersion.startsWith("7.1")})
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 #end
+#if (${liferayVersion.startsWith("7.1")})
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
+#else
+	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning"
+#end
 }
