LPS-105232 Use token for portal.vulcan.api

--- a/modules/sdk/project-templates/project-templates-rest-builder/src/main/resources/archetype-resources/__artifactId__-api/pom.xml
+++ b/modules/sdk/project-templates/project-templates-rest-builder/src/main/resources/archetype-resources/__artifactId__-api/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>com.liferay</groupId>
 			<artifactId>com.liferay.portal.vulcan.api</artifactId>
-			<version>7.6.1</version>
+			<version>@com.liferay.portal.vulcan.api.version@</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
