--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -34,7 +34,8 @@ ext {
 		"com.liferay.portal.tools.service.builder.version": "1.0.345",
 		"com.liferay.portal.tools.rest.builder.version": "1.0.112",
 		"com.liferay.portal.tools.soy.builder.version": "3.0.4",
-		"com.liferay.portal.tools.theme.builder.version": "1.1.8"
+		"com.liferay.portal.tools.theme.builder.version": "1.1.8",
+		"com.liferay.portal.vulcan.api.version": "7.6.1"
 	]
 }
 
