--- a/modules/dxp/apps/portal-search-tuning/portal-search-tuning-rankings-web/package.json
+++ b/modules/dxp/apps/portal-search-tuning/portal-search-tuning-rankings-web/package.json
@@ -5,6 +5,7 @@
 		"@clayui/drop-down": "3.4.4",
 		"@clayui/form": "3.8.0",
 		"@clayui/icon": "3.0.5",
+		"@clayui/layout": "3.1.0",
 		"@clayui/link": "3.2.0",
 		"@clayui/loading-indicator": "3.1.0",
 		"@clayui/management-toolbar": "3.2.1",
