--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/package.json
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/package.json
@@ -7,6 +7,7 @@
 		"@clayui/drop-down": "3.4.4",
 		"@clayui/form": "3.8.0",
 		"@clayui/icon": "3.0.5",
+		"@clayui/layout": "3.1.0",
 		"@clayui/list": "3.2.5",
 		"@clayui/management-toolbar": "3.2.1",
 		"@clayui/modal": "3.5.1",
