--- a/modules/apps/dispatch/dispatch-service/build.gradle
+++ b/modules/apps/dispatch/dispatch-service/build.gradle
@@ -4,10 +4,11 @@ buildService {
 
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
-	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.2.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:dispatch:dispatch-api")
+	compileOnly project(":apps:portal:portal-aop-api")
+	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
 	compileOnly project(":core:petra:petra-string")
 }
