--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language.properties
@@ -1,7 +1,8 @@
 add-marketing-categories=Add Marketing Categories
 audience=Audience
 content-dashboard=Content Dashboard
-content-per-audience-and-stage-x=Content per Audience and Stage ({0})
+content-per-x=Content per {0}
+content-per-x-and-x=Content per {0} and {1}
 content-x=Content ({0})
 create-marketing-categories-to-label-and-audit-your-content=Create marketing categories to label and audit your content.
 education=Education
