LPS-105232 Add REST builder template to Project Templates

--- a/modules/sdk/project-templates/project-templates/build.gradle
+++ b/modules/sdk/project-templates/project-templates/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.portlet.provider", version: "1.0.93"
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.portlet.toolbar.contributor", version: "1.0.93"
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.rest", version: "1.0.95"
+	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.rest.builder", version: "1.0.0"
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.service", version: "1.0.93"
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.service.builder", version: "1.0.96"
 	projectTemplates group: "com.liferay", name: "com.liferay.project.templates.service.wrapper", version: "1.0.93"
