--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -210,9 +210,9 @@ bundle.version[com.liferay.app.builder.rest.impl]=1.0.16
 bundle.version[com.liferay.app.builder.rest.test]=1.0.0
 bundle.version[com.liferay.app.builder.service]=1.0.13
 bundle.version[com.liferay.app.builder.web]=1.0.33
-bundle.version[com.liferay.app.builder.workflow.api]=1.0.2
+bundle.version[com.liferay.app.builder.workflow.api]=2.0.0
 bundle.version[com.liferay.app.builder.workflow.lang]=1.0.4
-bundle.version[com.liferay.app.builder.workflow.rest.api]=1.0.2
+bundle.version[com.liferay.app.builder.workflow.rest.api]=2.0.0
 bundle.version[com.liferay.app.builder.workflow.rest.client]=1.0.0
 bundle.version[com.liferay.app.builder.workflow.rest.impl]=1.0.2
 bundle.version[com.liferay.app.builder.workflow.rest.test]=1.0.0
@@ -648,7 +648,7 @@ bundle.version[com.liferay.image.uploader.web]=4.0.9
 bundle.version[com.liferay.imageio.plugins]=4.0.5
 bundle.version[com.liferay.info.api]=5.3.1
 bundle.version[com.liferay.info.impl]=4.0.8
-bundle.version[com.liferay.info.list.provider.item.selector.api]=1.1.2
+bundle.version[com.liferay.info.list.provider.item.selector.api]=1.2.0
 bundle.version[com.liferay.info.list.provider.item.selector.web]=1.0.17
 bundle.version[com.liferay.info.taglib]=1.1.1
 bundle.version[com.liferay.info.test]=1.0.0
@@ -708,7 +708,7 @@ bundle.version[com.liferay.lang.builder]=1.0.35
 bundle.version[com.liferay.layout.admin.api]=3.0.3
 bundle.version[com.liferay.layout.admin.web.test]=1.0.0
 bundle.version[com.liferay.layout.admin.web]=4.0.27
-bundle.version[com.liferay.layout.api]=6.5.1
+bundle.version[com.liferay.layout.api]=6.6.0
 bundle.version[com.liferay.layout.content.page.editor.api]=2.2.2
 bundle.version[com.liferay.layout.content.page.editor.impl]=1.0.4
 bundle.version[com.liferay.layout.content.page.editor.web.test]=1.0.0
@@ -957,7 +957,7 @@ bundle.version[com.liferay.portal.events.test]=1.0.0
 bundle.version[com.liferay.portal.executor]=5.0.3
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=1.0.2
-bundle.version[com.liferay.portal.impl]=5.11.1
+bundle.version[com.liferay.portal.impl]=5.11.2
 bundle.version[com.liferay.portal.inactive.request.handler]=3.0.8
 bundle.version[com.liferay.portal.init.servlet.filter]=5.0.4
 bundle.version[com.liferay.portal.instance.lifecycle.api]=3.0.3
@@ -968,7 +968,7 @@ bundle.version[com.liferay.portal.instances.web]=4.0.8
 bundle.version[com.liferay.portal.jmx.api]=4.0.3
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=7.0.4
-bundle.version[com.liferay.portal.kernel]=8.0.1
+bundle.version[com.liferay.portal.kernel]=8.0.2
 bundle.version[com.liferay.portal.language.extender]=5.0.6
 bundle.version[com.liferay.portal.language.servlet.filter]=5.0.3
 bundle.version[com.liferay.portal.language.test]=1.0.0
@@ -1257,7 +1257,7 @@ bundle.version[com.liferay.portal.workflow.kaleo.runtime.scripting.impl]=4.0.7
 bundle.version[com.liferay.portal.workflow.kaleo.service]=5.0.19
 bundle.version[com.liferay.portal.workflow.kaleo.test]=1.0.0
 bundle.version[com.liferay.portal.workflow.lang]=5.0.14
-bundle.version[com.liferay.portal.workflow.metrics.api]=3.3.3
+bundle.version[com.liferay.portal.workflow.metrics.api]=3.4.0
 bundle.version[com.liferay.portal.workflow.metrics.demo.data.creator.api]=1.0.5
 bundle.version[com.liferay.portal.workflow.metrics.demo.data.creator.impl]=1.0.6
 bundle.version[com.liferay.portal.workflow.metrics.demo]=1.0.7
@@ -1377,6 +1377,7 @@ bundle.version[com.liferay.saml.opensaml.integration]=4.0.11
 bundle.version[com.liferay.saml.persistence.api]=4.2.3
 bundle.version[com.liferay.saml.persistence.service]=4.0.10
 bundle.version[com.liferay.saml.persistence.test]=1.0.0
+bundle.version[com.liferay.saml.saas]=1.0.0
 bundle.version[com.liferay.saml.test]=1.0.0
 bundle.version[com.liferay.saml.web]=4.0.15
 bundle.version[com.liferay.sass.compiler.api]=2.0.2
@@ -1516,7 +1517,7 @@ bundle.version[com.liferay.text.localizer.address.api]=3.0.3
 bundle.version[com.liferay.text.localizer.taglib.test]=1.0.0
 bundle.version[com.liferay.text.localizer.taglib]=3.0.5
 bundle.version[com.liferay.tld.formatter]=1.0.6
-bundle.version[com.liferay.translation.api]=1.0.2
+bundle.version[com.liferay.translation.api]=2.0.0
 bundle.version[com.liferay.translation.test]=1.0.0
 bundle.version[com.liferay.translation.web]=1.0.2
 bundle.version[com.liferay.translator.web]=4.0.7
@@ -2846,6 +2847,7 @@ project.name[com.liferay.saml.opensaml.integration]=:dxp:apps:saml:saml-opensaml
 project.name[com.liferay.saml.persistence.api]=:dxp:apps:saml:saml-persistence-api
 project.name[com.liferay.saml.persistence.service]=:dxp:apps:saml:saml-persistence-service
 project.name[com.liferay.saml.persistence.test]=:dxp:apps:saml:saml-persistence-test
+project.name[com.liferay.saml.saas]=:saas:apps:saml-saas
 project.name[com.liferay.saml.test]=:dxp:apps:saml:saml-test
 project.name[com.liferay.saml.web]=:dxp:apps:saml:saml-web
 project.name[com.liferay.sass.compiler.api]=:util:sass-compiler-api
